# advent_of_code

./: Cargo.toml  README.md
2020/: Cargo.toml
2020/src/: day02.rs  day04.rs  day07.rs  day12.rs  day13.rs  day14.rs  lib.rs
2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  lib.rs
2022/: .env.dist  .gitignore  old.py  pyproject.toml
2022/notebooks/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  template.ipynb
2022/scripts/: aoc.py
2023/: Cargo.toml
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  lib.rs  main.rs
src/: day01.rs  day02.rs  day03.rs  day05.rs  day06.rs  day08.rs  day09.rs  day10.rs  day11.rs  day11_2.rs  day14.rs  day15.rs  day16.rs  lib.rs  main.rs
src/01/: main.rs
src/01_eb/: main.rs
